tests/lean/user_rec_crash.lean.expected.out
user_rec_crash.lean:3:2: error:invalid 'induction' tactic, invalid user defined recursor, 'and.rec_on' does not support dependent elimination, and position of the major premise was not specified (solution: set attribute '[recursor <pos>]', where <pos> is the position of the major premise)
proof state:
a b : Prop,
h : a ∧ b
⊢ a
user_rec_crash.lean:4:0: error: don't know how to synthesize placeholder
a b : Prop,
h : a ∧ b
⊢ a
user_rec_crash.lean:4:0: error: failed to add declaration 'example' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
